# resume

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  main.tf  nginx.conf  uwsgi.ini  variables.tf
.github/workflows/: deploy-analysis.yml  deploy-frontend.yml  deploy-nginx.yml  deploy-on-new-tag.yml  deploy-scheduler.yml  deploy-server.yml  deploy-telegram.yml  lint-server.yml
analysis/: pyproject.toml
core/management/commands/: createsu.py
frontend/: Dockerfile  Dockerfile.dev  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: app.css  app.html  store.js
frontend/src/lib/components/: Card.svelte  SkillLevel.svelte  SoftSkills.svelte  Timeline.svelte  TimelineCarousel.svelte  ToggleSwitch.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/contact/: +page.svelte  +server.js
frontend/src/routes/resume/: +page.svelte
nginx/: Dockerfile  Dockerfile.dev  nginx.conf  nginx.dev.conf
nginx/.github/workflows/: deploy-on-new-tag.yml
resume/: settings.py  urls.py
scheduler/: Dockerfile  pyproject.toml
scheduler/scheduler/: main.py  settings.py  utils.py
server/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  test.py  uwsgi.ini
server/.github/workflows/: deploy-on-new-tag.yml
server/contact/: functions.py  models.py  views.py
server/contact/migrations/: 0001_initial.py  0002_contact_created_at.py
server/core/: admin.py  models.py  serializers.py  signals.py  views.py
server/core/migrations/: 0001_initial.py  0002_document_created_at_userapikey_userprofile.py  0003_invitecode_userprofile_invite_code.py  0004_alter_invitecode_code.py  0005_alter_invitecode_code.py  0006_userprofile_updates_active.py
server/server/: settings.py  urls.py
server/stocks/: apps.py  models.py  serializers.py  views.py
server/stocks/analysis/: functions.py
server/stocks/migrations/: 0001_initial.py  0002_indicator_state_stock_updated_at_stock_state_and_more.py  0003_stock_name.py  0004_remove_stock_state_and_more.py  0004_subscription_interval_subscription_period.py
server/stocks/signals/: classes.py  signals.py
server/tests/: base.py  base_case.py  test_stocks.py  test_users.py
server/tests/test_core/: test_user_profile.py  test_users.py
server/tests/test_stocks/: test_views.py
server/tests/test_stocks/test_analysis/: test_functions.py
server/tests/test_stocks/test_signals/: test_signals.py
telegram/: Dockerfile.dev  pyproject.toml  test.py
telegram/telegram/: backend_requests.py  main.py  settings.py
telegram/telegram/routers/: other.py  register.py  subscribe.py
