[tool.poetry]
name = "scheduler"
version = "0.1.0"
description = ""
authors = ["Mykyta Prokaiev <mykytaprokaiev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
schedule = "^1.2.1"
urllib3 = "^2.2.0"
python-dotenv = "^1.0.1"
pydantic = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
