[tool.poetry]
name = "resume"
version = "0.1.0"
description = ""
authors = ["Mykyta Prokaiev <mykytaprokaiev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
uwsgi = "^2.0.23"
psycopg2 = "^2.9.9"
django = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
