[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Mykyta Prokaiev <mykytaprokaiev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
uwsgi = "^2.0.23"
psycopg2 = "^2.9.9"
django = "^5.0"
djangorestframework = "^3.14.0"
markdown = "^3.5.1"
django-filter = "^23.5"
djangorestframework-simplejwt = "^5.3.1"
requests = "^2.31.0"
django-cors-headers = "^4.3.1"
djangorestframework-api-key = "^3.0.0"
yfinance = "^0.2.36"
technical-analysis = "^0.0.4"
mplfinance = "^0.12.10b0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "1.7.0"
djangorestframework-stubs = "^3.14.5"
pytest-django = "^4.8.0"
types-requests = "^2.31.0.20240125"
pandas-stubs = "^2.1.4.231227"
django-stubs = "^4.2.7"
pytest-mypy-plugins = "^3.0.0"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
strict_optional = true
exclude = "tests/base_case.py"
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "server.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
